# simulator_exporter

./: .gitignore  README.md  main.py  pyproject.toml
example/: gen.yml  generate_metadata.yml  pod-example.yaml  t.yml  t2.yml
example/generator/: deployment.yaml
simulate_exporter/: __init__.py  exporter.py  generate.py  k8s_objects.py  models.py  prom.py  simulate.py  tmp.simulate.py  utils.py
templates/: deployment.j2
